# BookShelf

./: docker-compose.yml
backend/: Dockerfile
backend/api/: pyproject.toml
frontend/: Dockerfile
frontend/trainpad/: package-lock.json  package.json
