[tool.poetry]
name = "trainpad-api"
version = "0.1.0"
description = ""
authors = ["tsubasa.takeda <tsubasa.takeda@brainpad.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
